--- a/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.scss
+++ b/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.scss
@@ -6,3 +6,24 @@
 .person-icon {
   margin-right: 8px;
 }
+
+.warning-icon {
+  color: #ecb324;
+  margin-right: 5px;
+  display: inline-block;
+  position: relative;
+}
+
+.accepted-icon {
+  color: greenyellow;
+  margin-right: 5px;
+  display: inline-block;
+  position: relative;
+}
+
+.rejected-icon {
+  color: indianred;
+  margin-right: 5px;
+  display: inline-block;
+  position: relative;
+}
