feat: algunos fix de consistencia en gral

--- a/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
+++ b/src/app/modules/clientes/registrar-clientes/registrar-clientes.component.html
@@ -150,6 +150,7 @@
   </form>
 
   <br>
+  <mat-divider class="my-3"></mat-divider>
 
   <!-- Btn de cancelar, registrar y modificar -->
   <div class="row text-right">
