--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -16,7 +16,7 @@
       <div class="row pt-4">
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Nombre</mat-label>
+            <mat-label>Empleado</mat-label>
             <input type="text" matInput [formControl]="txNombre"/>
           </mat-form-field>
           <!--
