--- a/src/app/modules/productos/registrar-producto/registrar-producto.component.html
+++ b/src/app/modules/productos/registrar-producto/registrar-producto.component.html
@@ -151,6 +151,9 @@
       </div>
     </div>
 
+    <mat-divider></mat-divider>
+    <br>
+
     <div class="row text-right mt-3 mb-3">
       <!-- Btn de cancelar, registrar y modificar -->
       <div class="row text-right">
