--- a/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.html
+++ b/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.html
@@ -20,7 +20,7 @@
 
         <div class="col-md-3">
           <mat-form-field appearance="outline" class="w-100">
-            <mat-label>Nombre</mat-label>
+            <mat-label>Empleado</mat-label>
             <mat-select [formControl]="txNombreUsuario">
               <mat-option *ngFor="let empleado of listaEmpleados" [value]="empleado.id">
                 {{ empleado.nombre + ' ' + empleado.apellido }}
