se muestra la cantidad de stock del producto

--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.scss
@@ -50,6 +50,11 @@
   color: grey;
 }
 
+.product-price-seleccionado {
+  font-size: 18px;
+  color: #e15b35;
+}
+
 /* Mensaje de producto vacío */
 .empty-product-message {
   display: flex;
