--- a/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
+++ b/src/app/modules/configuraciones/consultar-configuraciones/consultar-configuraciones.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div *ngIf="!isSearchingConfiguration" class="container py-3 col-xl-11">
-  <mat-card class="mat-elevation-z12 p-4">
+  <mat-card class="mat-elevation-z12 p-4 mat-card">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Configuración</p>
