--- a/src/app/modules/login/login.component.scss
+++ b/src/app/modules/login/login.component.scss
@@ -10,3 +10,9 @@
 #btnRegistrarse {
   color: #e15b35;
 }
+
+.mat-card {
+  min-width: 300px; /* Establece el ancho mínimo de la tarjeta */
+  width: 100%; /* Ancho completo hasta que alcance el mínimo */
+  overflow-x: auto;
+}
