--- a/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
+++ b/src/app/modules/clientes/consultar-clientes/consultar-clientes.component.html
@@ -1,9 +1,9 @@
 <div class="container py-3 col-xl-11">
-  <mat-card class="mat-elevation-z12 p-4">
+  <mat-card class="mat-elevation-z12 p-4 mat-card">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Clientes</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoCliente()">Registrar nuevo cliente</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3 botonR" (click)="registrarNuevoCliente()">Registrar nuevo cliente</button>
       </div>
     </div>
 
@@ -61,11 +61,11 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card *ngIf="clientes.length > 0">
+  <mat-card class="mat-card" *ngIf="clientes.length > 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
-          <mat-table [dataSource]="tableDataSource" matSort>
+          <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
             <ng-container matColumnDef="nombre">
               <mat-header-cell *matHeaderCellDef>NOMBRE</mat-header-cell>
               <mat-cell *matCellDef="let usuario" data-label="Nombre">{{ usuario.nombre + ' ' + usuario.apellido }}</mat-cell>
@@ -77,7 +77,7 @@
             </ng-container>
 
 
-            <ng-container matColumnDef="acciones">
+            <ng-container matColumnDef="acciones" class="mat-column-acciones">
               <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
               <mat-cell *matCellDef="let usuario" data-label="Acciones">
                 <button class="btn" mat-icon-button matTooltip="Ver">
