--- a/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
+++ b/src/app/modules/empleados/consultar-empleados/consultar-empleados.component.html
@@ -52,10 +52,10 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card *ngIf="empleados.length > 0">
+  <mat-card class="mat-card" *ngIf="empleados.length > 0">
     <mat-card-content>
       <div class="row">
-        <div class="col-md-12 table-responsive">
+        <div class="col-md-12">
           <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
             <ng-container matColumnDef="nombreUsuario">
               <mat-header-cell *matHeaderCellDef>USUARIO</mat-header-cell>
@@ -77,7 +77,7 @@
               <mat-cell *matCellDef="let usuario" data-label="Cuil">{{ formatearCuil(usuario.cuil) }}</mat-cell>
             </ng-container>
 
-            <ng-container matColumnDef="acciones">
+            <ng-container matColumnDef="acciones" class="mat-column-acciones">
               <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
               <mat-cell *matCellDef="let usuario" data-label="Acciones">
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verEmpleado(usuario, false)">
