--- a/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
+++ b/src/app/modules/empleados/marcar-asistencia/marcar-asistencia.component.html
@@ -1,6 +1,6 @@
 <div class="container py-3 col-xl-11">
 
-  <mat-card class="mat-elevation-z12 p-4">
+  <mat-card class="mat-elevation-z12 p-4 mat-card-fondo-asistencia">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
         <p class="titulo">Asistencia</p>
@@ -112,12 +112,12 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card *ngIf="!isSearchingAsistencias">
+  <mat-card class="mat-card" *ngIf="!isSearchingAsistencias">
     <mat-card-content>
       <!-- Tabla existente -->
       <div class="row">
         <div class="col-md-12">
-          <mat-table [dataSource]="asistencias" matSort>
+          <mat-table [dataSource]="asistencias" matSort class="custom-table">
 
             <!-- Nombre del empleado -->
             <ng-container matColumnDef="nombre">
