--- a/src/app/modules/login/login.component.html
+++ b/src/app/modules/login/login.component.html
@@ -1,11 +1,11 @@
-<div *ngIf="!isLoading" class="row justify-content-center mt-5">
+<div *ngIf="!isLoading" class="container row justify-content-center mt-5">
   <div class="col-8">
     <form [formGroup]="formLogin">
       <div class="col">
         <h1 class="titulo">{{ existeConfiguracion ? 'Iniciar sesión' : 'Registrar usuario' }}</h1>
       </div>
 
-      <mat-card>
+      <mat-card class="mat-card">
         <mat-card-content>
 
           <!-- Campos adicionales solo para el registro -->
