--- a/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.scss
+++ b/src/app/modules/pedidos/consultar-pedidos/consultar-pedidos.component.scss
@@ -4,3 +4,19 @@
   display: inline-block;
   position: relative;
 }
+
+@media (max-width: 992px) {
+  .custom-table {
+    width: 100%;
+    overflow-x: auto;  /* Habilitar el desplazamiento en pantallas medianas */
+
+  }
+}
+
+@media (max-width: 768px) {
+  .custom-table {
+    width: 100%;
+    min-width: 700px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
+  }
+}
+
