--- a/src/app/modules/productos/consultar-productos/consultar-productos.component.html
+++ b/src/app/modules/productos/consultar-productos/consultar-productos.component.html
@@ -1,9 +1,9 @@
 <div class="container py-3 col-xl-11">
-  <mat-card class="mat-elevation-z12 p-4">
+  <mat-card class="mat-elevation-z12 p-4 mat-card">
     <div class="row">
       <div class="d-flex justify-content-between align-items-center w-100">
         <p class="titulo">Productos</p>
-        <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevoProducto()">Registrar nuevo producto</button>
+        <button mat-stroked-button color="warn" class="btn round mb-3 botonR" (click)="registrarNuevoProducto()">Registrar nuevo producto</button>
       </div>
     </div>
     <mat-divider></mat-divider>
@@ -69,11 +69,11 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-card *ngIf="productos.length > 0">
+  <mat-card class="mat-card" *ngIf="productos.length > 0">
     <mat-card-content>
       <div class="row">
         <div class="col-md-12">
-          <mat-table [dataSource]="tableDataSource" matSort>
+          <mat-table [dataSource]="tableDataSource" matSort class="custom-table">
             <ng-container matColumnDef="imgProducto">
               <mat-header-cell *matHeaderCellDef>IMAGEN</mat-header-cell>
               <mat-cell *matCellDef="let producto">
@@ -108,7 +108,7 @@
               <mat-header-cell *matHeaderCellDef>MARCA</mat-header-cell>
               <mat-cell *matCellDef="let producto">{{ producto.marca?.nombre }}</mat-cell>
             </ng-container>
-            <ng-container matColumnDef="acciones">
+            <ng-container matColumnDef="acciones" >
               <mat-header-cell *matHeaderCellDef>ACCIONES</mat-header-cell>
               <mat-cell *matCellDef="let producto" data-label="Acciones">
                 <button class="btn" mat-icon-button matTooltip="Ver" (click)="verProducto(producto, false)">
