--- a/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.scss
+++ b/src/app/modules/promociones/notificar-promocion/notificar-promocion.component.scss
@@ -22,6 +22,22 @@
   font-size: 18px;
 }
 
+.upload-text::after {
+  content: 'Arrastra una imagen aquí o haz clic para subir';
+}
+
+@media (max-width: 500px) {
+  .upload-text::after {
+    content: 'Sube una imagen';
+  }
+}
+
+.mat-card {
+  min-width: 450px; /* Establece el ancho mínimo de la tarjeta */
+  width: 100%; /* Ancho completo hasta que alcance el mínimo */
+  overflow-x: auto;
+}
+
 .file-input {
   position: absolute;
   width: 100%;
