--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,47 @@
 @import '@ctrl/ngx-emoji-mart/picker';
 
+/* Responsive */
+.custom-table {
+  min-width: 400px;  /* Ancho mínimo para la tabla */
+  overflow-x: auto;  /* Permitir scroll horizontal */
+}
+
+@media (max-width: 992px) {
+  .custom-table {
+    width: 100%;
+    overflow-x: auto;  /* Habilitar el desplazamiento en pantallas medianas */
+
+  }
+}
+
+@media (max-width: 768px) {
+  .custom-table {
+    width: 100%;
+    min-width: 700px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
+  }
+}
+
+.mat-column-acciones {
+  min-width: 168px; /* Ajusta el tamaño para que no se corte el icono de borrar */
+}
+
+.botonR {
+  margin-left: 1rem; /* Margen entre el título y el botón */
+  padding: 0.5rem 1rem; /* Espacio dentro del botón */
+}
+
+.mat-card {
+  min-width: 400px; /* Establece el ancho mínimo de la tarjeta */
+  width: 100%; /* Ancho completo hasta que alcance el mínimo */
+  overflow-x: auto;
+}
+
+.container {
+  overflow-x: auto;
+}
+
+/* Fin Responsive */
+
 html, body {
   height: 100%;
   margin: 0;
@@ -17,6 +59,8 @@ body {
   color: #e15b35;
   font-size: 26px;
 }
+
+
 
 .notify-success {
   --mat-mdc-snack-bar-button-color: #155724;
@@ -135,40 +179,6 @@ body {
   }
 }
 
-/* Responsive */
 
-.custom-table {
-  min-width: 800px;  /* Ancho mínimo para la tabla */
-}
 
-.table-responsive {
-  overflow-x: auto;  /* Permitir scroll horizontal */
-}
 
-@media (max-width: 992px) {
-  .custom-table {
-    width: 100%;
-    overflow-x: auto;  /* Habilitar el desplazamiento en pantallas medianas */
-  }
-}
-
-@media (max-width: 768px) {
-  .custom-table {
-    width: 100%;
-    min-width: 700px;  /* Reducimos el ancho mínimo en pantallas más pequeñas */
-  }
-}
-
-.botonR {
-  margin-left: 1rem; /* Margen entre el título y el botón */
-  padding: 0.5rem 1rem; /* Espacio dentro del botón */
-}
-
-.mat-card {
-  min-width: 400px; /* Establece el ancho mínimo de la tarjeta */
-  width: 100%; /* Ancho completo hasta que alcance el mínimo */
-}
-
-.container {
-  overflow-x: auto;
-}
