--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -9,7 +9,7 @@
     <mat-divider></mat-divider>
     <br>
 
-    <h4>Filtros de búsqueda</h4>
+    <h4 style="color: grey">Filtros de búsqueda</h4>
     <form [formGroup]="form">
       <div class="row pt-4">
         <div class="col-md-3">
