--- a/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.html
+++ b/src/app/modules/empleados/consultar-asistencia/consultar-asistencia.component.html
@@ -2,7 +2,7 @@
   <mat-card class="mat-elevation-z12 p-4">
     <div class="row">
       <div class="col d-flex justify-content-between align-items-center">
-        <p class="titulo">Presencia</p>
+        <p class="titulo">Control de Empleado</p>
         <div class="d-flex justify-content-end">
           <button mat-stroked-button color="warn" class="btn round mb-3" (click)="registrarNuevaAsistencia()">Registrar nueva asistencia</button>
           <button mat-stroked-button color="warn" class="btn round mb-3 ms-2" (click)="registrarNuevaLicencia()">Registrar nueva licencia</button>
@@ -196,7 +196,7 @@
                       check_circle
                     </mat-icon>
 
-                    <mat-icon *ngIf="licencia.estadoLicencia.id === 3" class="rejected-icon" matTooltip="El empleador ha rechazado su solicitud de licencia.">
+                    <mat-icon *ngIf="licencia.estadoLicencia.id === 3" class="rejected-icon" matTooltip="El empleador ha denegado su solicitud de licencia.">
                       cancel
                     </mat-icon>
                     {{ licencia.estadoLicencia.nombre }}
