--- a/src/app/modules/inventario/registrar-inventario/registrar-inventario.component.html
+++ b/src/app/modules/inventario/registrar-inventario/registrar-inventario.component.html
@@ -55,10 +55,19 @@
   <div class="row pt-4" *ngIf="movimientosProducto.length > 0 && !esRegistro">
     <div class="col-md-3">
       <mat-form-field appearance="outline" class="w-100">
-        <mat-label>Fecha Movimiento</mat-label>
+        <mat-label>Fecha Desde</mat-label>
         <input matInput [matDatepicker]="pickerFecha" [formControl]="txBuscarFecha" />
         <mat-datepicker-toggle matSuffix [for]="pickerFecha"></mat-datepicker-toggle>
         <mat-datepicker #pickerFecha></mat-datepicker>
+        <mat-icon matPrefix>search</mat-icon>
+      </mat-form-field>
+    </div>
+    <div class="col-md-3">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Fecha Hasta</mat-label>
+        <input matInput [matDatepicker]="pickerFechaHasta" [formControl]="txBuscarFechaHasta" />
+        <mat-datepicker-toggle matSuffix [for]="pickerFechaHasta"></mat-datepicker-toggle>
+        <mat-datepicker #pickerFechaHasta></mat-datepicker>
         <mat-icon matPrefix>search</mat-icon>
       </mat-form-field>
     </div>
