--- a/src/app/modules/venta/registrar-venta/registrar-venta.component.html
+++ b/src/app/modules/venta/registrar-venta/registrar-venta.component.html
@@ -190,7 +190,7 @@
             <div class="d-flex justify-content-between align-items-center border-bottom p-3 producto-item">
               <div class="col-4 d-flex flex-column">
                 <span class="m-0"><b>{{ producto.nombre }}</b></span>
-                <span class="text-muted">P/U: $ {{ producto.precioSinIVA | number:'1.2-2':'es-AR' }}</span>
+                <span class="text-muted">P/U: $ {{ producto.precioConIVA | number:'1.2-2':'es-AR' }}</span>
                 <span class="text-muted" *ngIf="producto.promocion?.id" [matTooltip]="producto.promocion.nombre">Promoción: - {{ producto.promocion.porcentajeDescuento + '%' }}</span>
               </div>
               <div class="d-flex align-items-center col-4 justify-content-center">
@@ -199,7 +199,7 @@
                 <button class="btn btn-light btn-sm" (click)="aumentarCantidad(producto)">+</button>
               </div>
               <div class="text-end col-4">
-                <span class="m-0 costo"><b>$ {{ producto.precioSinIVA * producto.cantidadSeleccionada | number:'1.2-2':'es-AR' }}</b></span>
+                <span class="m-0 costo"><b>$ {{ producto.precioConIVA * producto.cantidadSeleccionada | number:'1.2-2':'es-AR' }}</b></span>
                 <div class="iconos-editar-eliminar ">
                   <button mat-icon-button [matTooltip]="'Editar en esta venta'" (click)="editarProductoEnVenta(producto)">
                     <mat-icon>edit</mat-icon>
