--- a/src/app/modules/inventario/registrar-inventario/registrar-inventario.component.html
+++ b/src/app/modules/inventario/registrar-inventario/registrar-inventario.component.html
@@ -124,7 +124,7 @@
     </mat-card-content>
   </mat-card>
 
-  <mat-divider class="my-3" *ngIf="!esRegistro"></mat-divider>
+  <mat-divider class="my-3"></mat-divider>
   <br>
 
   <!-- Btn de cancelar, registrar y modificar -->
