--- a/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.scss
+++ b/src/app/modules/comprobante/registrar-comprobante/registrar-comprobante.component.scss
@@ -72,3 +72,14 @@
   margin-top: auto;
   margin-bottom: auto;
 }
+
+.no-pedidos-card {
+  max-width: 300px;
+  margin: 0 auto;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  font-size: 16px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  color: grey;
+}
