--- a/src/app/modules/empleados/registrar-licencia/registrar-licencia.component.scss
+++ b/src/app/modules/empleados/registrar-licencia/registrar-licencia.component.scss
@@ -8,3 +8,21 @@
   display: inline-block;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
 }
+
+.btn-upload {
+  color: #333;
+  text-transform: none;
+  display: flex;
+  font-size: 14px;
+  align-items: center;
+  background-color: #f0f0f0;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+
+  mat-icon {
+    margin-right: 8px;
+  }
+
+  &:hover {
+    background-color: #e0e0e0;
+  }
+}
