btn facturar venta en consulta de ventas

--- a/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
+++ b/src/app/modules/venta/consultar-ventas/consultar-ventas.component.html
@@ -136,6 +136,9 @@
                 <button *ngIf="venta.comprobanteAfip.comprobante_pdf_url != null" mat-icon-button color="primary"  matTooltip="Imprimir comprobante" (click)="imprimirComprobante(venta)">
                   <mat-icon class="imprimir">print</mat-icon>
                 </button>
+                <button *ngIf="venta.comprobanteAfip.comprobante_pdf_url == null" mat-icon-button color="primary"  matTooltip="Facturar venta" (click)="facturarVenta(venta)">
+                  <mat-icon class="facturar">attach_money</mat-icon>
+                </button>
               </mat-cell>
             </ng-container>
 
